@@ -5381,6 +5381,315 @@ name|abort
 argument_list|()
 expr_stmt|;
 block|}
+annotation|@
+name|SuppressWarnings
+argument_list|(
+literal|"unchecked"
+argument_list|)
+annotation|@
+name|Test
+argument_list|(
+name|timeout
+operator|=
+literal|10000
+argument_list|)
+DECL|method|testCopyFromHostWithRetryUnreserve ()
+specifier|public
+name|void
+name|testCopyFromHostWithRetryUnreserve
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|InMemoryMapOutput
+argument_list|<
+name|Text
+argument_list|,
+name|Text
+argument_list|>
+name|immo
+init|=
+name|mock
+argument_list|(
+name|InMemoryMapOutput
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|Fetcher
+argument_list|<
+name|Text
+argument_list|,
+name|Text
+argument_list|>
+name|underTest
+init|=
+operator|new
+name|FakeFetcher
+argument_list|<
+name|Text
+argument_list|,
+name|Text
+argument_list|>
+argument_list|(
+name|jobWithRetry
+argument_list|,
+name|id
+argument_list|,
+name|ss
+argument_list|,
+name|mm
+argument_list|,
+name|r
+argument_list|,
+name|metrics
+argument_list|,
+name|except
+argument_list|,
+name|key
+argument_list|,
+name|connection
+argument_list|)
+decl_stmt|;
+name|String
+name|replyHash
+init|=
+name|SecureShuffleUtils
+operator|.
+name|generateHash
+argument_list|(
+name|encHash
+operator|.
+name|getBytes
+argument_list|()
+argument_list|,
+name|key
+argument_list|)
+decl_stmt|;
+name|when
+argument_list|(
+name|connection
+operator|.
+name|getResponseCode
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+literal|200
+argument_list|)
+expr_stmt|;
+name|when
+argument_list|(
+name|connection
+operator|.
+name|getHeaderField
+argument_list|(
+name|SecureShuffleUtils
+operator|.
+name|HTTP_HEADER_REPLY_URL_HASH
+argument_list|)
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+name|replyHash
+argument_list|)
+expr_stmt|;
+name|ShuffleHeader
+name|header
+init|=
+operator|new
+name|ShuffleHeader
+argument_list|(
+name|map1ID
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+literal|10
+argument_list|,
+literal|10
+argument_list|,
+literal|1
+argument_list|)
+decl_stmt|;
+name|ByteArrayOutputStream
+name|bout
+init|=
+operator|new
+name|ByteArrayOutputStream
+argument_list|()
+decl_stmt|;
+name|header
+operator|.
+name|write
+argument_list|(
+operator|new
+name|DataOutputStream
+argument_list|(
+name|bout
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|ByteArrayInputStream
+name|in
+init|=
+operator|new
+name|ByteArrayInputStream
+argument_list|(
+name|bout
+operator|.
+name|toByteArray
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|when
+argument_list|(
+name|connection
+operator|.
+name|getInputStream
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+name|in
+argument_list|)
+expr_stmt|;
+name|when
+argument_list|(
+name|connection
+operator|.
+name|getHeaderField
+argument_list|(
+name|ShuffleHeader
+operator|.
+name|HTTP_HEADER_NAME
+argument_list|)
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+name|ShuffleHeader
+operator|.
+name|DEFAULT_HTTP_HEADER_NAME
+argument_list|)
+expr_stmt|;
+name|when
+argument_list|(
+name|connection
+operator|.
+name|getHeaderField
+argument_list|(
+name|ShuffleHeader
+operator|.
+name|HTTP_HEADER_VERSION
+argument_list|)
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+name|ShuffleHeader
+operator|.
+name|DEFAULT_HTTP_HEADER_VERSION
+argument_list|)
+expr_stmt|;
+comment|// Verify that unreserve occurs if an exception happens after shuffle
+comment|// buffer is reserved.
+name|when
+argument_list|(
+name|mm
+operator|.
+name|reserve
+argument_list|(
+name|any
+argument_list|(
+name|TaskAttemptID
+operator|.
+name|class
+argument_list|)
+argument_list|,
+name|anyLong
+argument_list|()
+argument_list|,
+name|anyInt
+argument_list|()
+argument_list|)
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+name|immo
+argument_list|)
+expr_stmt|;
+name|doThrow
+argument_list|(
+operator|new
+name|IOException
+argument_list|(
+literal|"forced error"
+argument_list|)
+argument_list|)
+operator|.
+name|when
+argument_list|(
+name|immo
+argument_list|)
+operator|.
+name|shuffle
+argument_list|(
+name|any
+argument_list|(
+name|MapHost
+operator|.
+name|class
+argument_list|)
+argument_list|,
+name|any
+argument_list|(
+name|InputStream
+operator|.
+name|class
+argument_list|)
+argument_list|,
+name|anyLong
+argument_list|()
+argument_list|,
+name|anyLong
+argument_list|()
+argument_list|,
+name|any
+argument_list|(
+name|ShuffleClientMetrics
+operator|.
+name|class
+argument_list|)
+argument_list|,
+name|any
+argument_list|(
+name|Reporter
+operator|.
+name|class
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|underTest
+operator|.
+name|copyFromHost
+argument_list|(
+name|host
+argument_list|)
+expr_stmt|;
+name|verify
+argument_list|(
+name|immo
+argument_list|)
+operator|.
+name|abort
+argument_list|()
+expr_stmt|;
+block|}
 DECL|class|FakeFetcher
 specifier|public
 specifier|static
